# Ketza

./: .gitignore  HTML_living_standard.html  Pipfile  README.md  build.py  build_elements.py  fetch_standard.py  pyproject.toml
ketza/: __init__.py  _elements.py  format.py  tags.py
tests/: indent_sample.html  linebreaks_sample.html  test_basic_markup.py  test_formatting.py  test_multiple_rows.py  test_no_content.py
